# nightjar

./: .gitignore  CLAUDE.md  README.md  TASKS.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/nightjar/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/songseed/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  atomic_transport.h  audio_engine.cpp  audio_engine.h  common.h  jni_bridge.cpp  metronome_sequencer.cpp  metronome_sequencer.h  midi_sequencer.cpp  midi_sequencer.h  oboe_playback_stream.cpp  oboe_playback_stream.h  oboe_recording_stream.cpp  oboe_recording_stream.h  spsc_ring_buffer.h  step_sequencer.cpp  step_sequencer.h  synth_engine.cpp  synth_engine.h  track_mixer.cpp  track_mixer.h  wav_track_source.cpp  wav_track_source.h  wav_writer.cpp  wav_writer.h
app/src/main/java/com/example/nightjar/: MainActivity.kt  NightjarApplication.kt
app/src/main/java/com/example/nightjar/audio/: AudioLatencyEstimator.kt  AudioRecorder.kt  MetronomePreferences.kt  MidiClipLength.kt  MusicalScaleHelper.kt  MusicalTimeConverter.kt  OboeAudioEngine.kt  SoundFontManager.kt  StudioPreferences.kt  ThemePreferences.kt  WavRecorder.kt  WavSplitter.kt  WaveformExtractor.kt
app/src/main/java/com/example/nightjar/data/db/: IdeaTagCrossRef.kt  NightjarDatabase.kt
app/src/main/java/com/example/nightjar/data/events/: PulseBus.kt
app/src/main/java/com/example/nightjar/data/repository/: DrumRepository.kt  ExploreRepository.kt  IdeaRepository.kt  MidiRepository.kt  StudioRepository.kt
app/src/main/java/com/example/nightjar/data/storage/: RecordingStorage.kt
app/src/main/java/com/example/nightjar/di/: AppModule.kt
app/src/main/java/com/example/nightjar/player/: ExplorePlaybackManager.kt  PlaybackViewModel.kt  StudioPlaybackManager.kt
app/src/main/java/com/example/nightjar/share/: ShareUtils.kt
app/src/main/java/com/example/nightjar/ui/components/: NjButton.kt  NjButtons.kt  NjCard.kt  NjChips.kt  NjGrain.kt  NjIcons.kt  NjIndication.kt  NjInlineAction.kt  NjKnob.kt  NjLedDot.kt  NjLiveWaveform.kt  NjMechanicalToggle.kt  NjPillrocker.kt  NjRecessedPanel.kt  NjScrubber.kt  NjSection.kt  NjStarburst.kt  NjStarfield.kt  NjTextFields.kt  NjTopBar.kt  NjWaveform.kt
app/src/main/java/com/example/songseed/: MainActivity.kt  SongSeedApplication.kt
app/src/main/java/com/example/songseed/audio/: AudioRecorder.kt
app/src/main/java/com/example/songseed/di/: AppModule.kt
app/src/main/java/com/example/songseed/player/: PlaybackViewModel.kt
app/src/main/java/com/example/songseed/share/: ShareUtils.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/nightjar/ui/: ExploreViewModelTest.kt  LibraryViewModelTest.kt  OverviewViewModelTest.kt  RecordViewModelTest.kt  StudioViewModelTest.kt  WorkspaceViewModelTest.kt
app/src/test/java/com/example/nightjar/util/: MainDispatcherRule.kt
app/src/test/java/com/example/songseed/: ExampleUnitTest.kt
app/src/test/java/com/example/songseed/ui/: LibraryViewModelTest.kt  RecordViewModelTest.kt  WorkspaceViewModelTest.kt
app/src/test/java/com/example/songseed/util/: MainDispatcherRule.kt
docs/: TASKS.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
specs/: add-track-row.md  audio-clips.md  piano-roll-pinch-zoom-polish.md  studio-transport-cursor.md
(+89 files in other folders)
